add some forgiven translations

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1257,7 +1257,7 @@
     "subscription.process.creation.title": "Validation step creation",
     "subscription.process.type.selection": "Please select a type of validation",
     "subscription.process.team.admin": "Team admin",
-    "subscription.process.form": "Formulaire",
+    "subscription.process.form": "Form",
     "subscription.process.email": "Email",
     "subscription.process.add.label": "Add a new step",
     "subscription.process.httpRequest": "HTTP Request",
@@ -1309,6 +1309,9 @@
     "motivation.form.formatter.label": "Formatter",
     "motivation.form.formatter.help": "a character string in which words between “[[ ]]” will be replaced by the corresponding values retrieved from the answers provided by the user in the form and sent to the administrator for validation.",
     "motivation.form.sample.help": "Use the test form below to preview and validate your formatting settings (formatter).",
+    "motivation.form.formKeysToMetadata.title": "Metadata",
+    "motivation.form.formKeysToMetadata.label": "Fields used as metadata",
+    "motivation.form.formKeysToMetadata.help": "Select the fields whose values will be used as API key metadata.",
     "motivation.form.sample.button.label": "Test",
     "sub.meta.modal.admin.custom.name.label": "Custom key name",
     "sub.meta.modal.admin.custom.name.help": "this custom name will only be visible to the admin team",
