--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1256,7 +1256,7 @@
   "subscription.process.creation.title": "Création d'une étape de validation",
   "subscription.process.type.selection": "Merci de sélectionner un type de validation",
   "subscription.process.team.admin": "Admin. équipe",
-  "subscription.process.form": "Form",
+  "subscription.process.form": "Formulaire",
   "subscription.process.email": "Courriel",
   "subscription.process.add.label": "Ajouter une nouvelle étape",
   "subscription.process.httpRequest": "Requête HTTP",
@@ -1311,7 +1311,7 @@
   "motivation.form.sample.button.label": "Tester",
   "motivation.form.formKeysToMetadata.title": "Métadonnées",
   "motivation.form.formKeysToMetadata.label": "Champs utilisés comme métadonnées",
-  "motivation.form.formKeysToMetadata.help": "Sélectionnez les champs dont les valeurs seront transférées dans les métadonnées de la clé API.",
+  "motivation.form.formKeysToMetadata.help": "Sélectionnez les champs dont les valeurs seront utilisé comme métadonnées de la clé API.",
   "sub.meta.modal.admin.custom.name.label": "Nom personnalisé de la clé",
   "sub.meta.modal.admin.custom.name.help": "ce nom personnalisé ne sera visible que de l'équipe d'administration",
   "sub.meta.modal.valid.until.label": "Valide jusqu'à",
