--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1686,5 +1686,11 @@
     "topbar.link.dashboard.label": "Dashboard",
     "topbar.search.placeholder": "Type %s to search",
     "topbar.theme.chooser.to.light.title": "Switch to light mode",
-    "topbar.theme.chooser.to.dark.title": "Switch to dark mode"
+    "topbar.theme.chooser.to.dark.title": "Switch to dark mode",
+    "dashboard.page.title": "Dashboard",
+    "dashboard.apis.table.header.label.api": "API",
+    "dashboard.apis.table.header.label.tags": "Tags",
+    "dashboard.apis.table.header.label.team": "Team",
+    "dashboard.apis.table.header.label.status": "Status",
+    "dashboard.apis.table.header.label.actions": "Actions"
 }
