WIP - dashboard tiles works

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1693,7 +1693,10 @@
   "topbar.theme.chooser.to.light.title": "Passer en mode clair",
   "topbar.theme.chooser.to.dark.title": "Passer en mode sombre",
   "dashboard.page.title": "Tableau de bord",
-  "dashboard.apis.tile.title": "Mes APIs",
+  "dashboard.tile.error": "Désolé, une erreur est survenue",
+  "dashboard.tile.error.button.label": "Récupérer les données",
+  "dashboard.page.tenant.setting.button.label": "Réglage du tenant",
+  "dashboard.apis.tile.title": "Mes APIs", 
   "dashboard.apis.tile.description": "Synthèse des publications et consommations",
   "dashboard.apis.tile.published.label": "Publiées",
   "dashboard.apis.tile.consumed.label": "Consommée",
