--- a/manual/docs/04-cli/042-apis-to-business-website/04-create-your-first-page.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/04-create-your-first-page.mdx
@@ -18,7 +18,7 @@ Right now, your `About` page should look exactly the same as the first page, but
 
 Edit the HTML content to make this page about you.
 
-To change or add more content to your About page, add more HTML element tags containing content. You can copy and paste the HTML code below between the existing <body></body> tags, or create your own.
+To change or add more content to your About page, add more HTML element tags containing content. You can copy and paste the HTML code below between the existing ``` <body></body>``` tags, or create your own.
 
 ```html title="src/pages/about.html"
 <body>
