FIX #898 - implements pkce flow for oauth2

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1683,6 +1683,10 @@
     "tenant.settings.mailer.test.connection.failed.label": "Test connection failed",
     "tenant.settings.authProvider.oauth.fetch.configuration.button.label": "Get configuration",
     "tenant.settings.authProvider.oauth.configuration.url.label": "URL of the OIDC config",
+    "tenant.settings.authProvider.oauth.configuration.pkceConfig.label": "PKCE configuration",
+    "tenant.settings.authProvider.oauth.configuration.pkceConfig.enabled.label": "Enable PKCE flow",
+    "tenant.settings.authProvider.oauth.configuration.pkceConfig.algorithm.label": "Algorithm",
+    "tenant.settings.authProvider.oauth.configuration.clientSecret.help": "If using MTLS, please do not provide a client secret.",
     "tenant.edition.color-theme.reset.button.label": "Reset theme",
     "tenant.edition.color-theme.reset.confirm.title": "Confirm reset",
     "tenant.edition.color-theme.reset.confirm.message": "Are you sure you want to reset the color theme to the default? This will permanently remove the current theme.",
