--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1684,6 +1684,10 @@
   "tenant.settings.mailer.test.connection.failed.label": "Test de connexion échoué",
   "tenant.settings.authProvider.oauth.fetch.configuration.button.label": "Récuperer la configuration",
   "tenant.settings.authProvider.oauth.configuration.url.label": "URL de la configuration OIDC",
+  "tenant.settings.authProvider.oauth.configuration.pkceConfig.label": "Configuration PKCE",
+  "tenant.settings.authProvider.oauth.configuration.pkceConfig.enabled.label": "Activer le flux PKCE",
+  "tenant.settings.authProvider.oauth.configuration.pkceConfig.algorithm.label": "Algorithme",
+  "tenant.settings.authProvider.oauth.configuration.clientSecret.help": "Dans la cas d'une utilisation via MTLS, veuillez ne pas renseigner de secret client",
   "account.creation.form.name.label": "Nom",
   "account.creation.form.email.label": "Courriel",
   "account.creation.form.password.label": "Mot de passe",
