--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1690,5 +1690,19 @@
     "tenant.edition.color-theme.reset.button.label": "Reset theme",
     "tenant.edition.color-theme.reset.confirm.title": "Confirm reset",
     "tenant.edition.color-theme.reset.confirm.message": "Are you sure you want to reset the color theme to the default? This will permanently remove the current theme.",
-    "tenant.edition.color-theme.reset.successful.message": "The color theme has been successfully reset."
+    "tenant.edition.color-theme.reset.successful.message": "The color theme has been successfully reset.",
+    "response.page.subscription-decline.title":"Refus souscription",
+    "response.page.subscription-decline.description": "la souscription a bien été refusée",
+    "response.page.subscription-accept.title":"Souscription effectuée",
+    "response.page.subscription-accept.description": "la souscription a bien été effectuée",
+    "response.page.team-invitation-decline.title":"Refus invitation",
+    "response.page.team-invitation-decline.description": "L'invitation a bien été refusée",
+    "response.page.account-creation-accept.title":"Compte validé",
+    "response.page.account-creation-accept.description": "Le compte à bien été validé",
+    "response.page.account-creation-validation-email.title":"Email validé",
+    "response.page.account-creation-validation-email.description": "Votre email a bien été validé, votre compte est créé",
+    "response.page.account-creation-validation-email-waiting.title":"Email validé",
+    "response.page.account-creation-validation-email-waiting.description": "Votre email a bien été validé, votre compte reste en cours de création Il sera disponible sous peu",
+    "response.page.account-creation-decline.title":"Refus de creation de compte",
+    "response.page.account-creation-decline.description": "La création de votre compte à bien été annulée"
 }
