--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -324,6 +324,7 @@
   "Userinfo URL": "URL info utilisateur",
   "Login URL": "URL de connexion",
   "Logout URL": "URL de déconnexion",
+  "oauth2.form.logout.url.help": "${redirect} et ${clientId} seront remplacées par les valeurs attendues",
   "Callback URL": "Callback URL",
   "Access token field name": "Champ du token d'accès",
   "Algo.": "Algo.",
@@ -1664,7 +1665,7 @@
   "notifications.page.table.header.label.actions": "Actions",
   "notifications.page.account.creation.attempt.detail.button.label": "Voir plus",
   "notifications.page.account.creation.attempt.detail.modal.title": "Détail de la demande de création de compte",
-  "tenant.edit.clientNamePattern.label" : "Modèle de nom de client personnalisé",
+  "tenant.edit.clientNamePattern.label": "Modèle de nom de client personnalisé",
   "tenant.edit.clientNamePattern.help": "Ce modèle est utilisé pour personnaliser le nom du client lors de la création d'une clé d'API. La chaîne de caractères peut contenir des valeurs dynamiques en utilisant la syntaxe ${ma.valeur}.",
   "tenant.edit.clientNamePattern.help2": "Les valeurs disponibles sont les suivantes :",
   "tenant.security.account.creation.process.panel.title": "Processus de création de comptes",
