--- a/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
@@ -488,28 +488,121 @@ This document provides a comprehensive overview of all Daikoku email events, the
       </details>
     </li>
     <li>
-      <details>
-        <summary>
-          Finalize <strong>New Account</strong> Creation
-        </summary>
-        <p>
-          <strong>This email is sent to the user to finalize account creation and validate their email address.</strong>
-        </p>
-        
-        <p>
-          <div><strong>Title</strong>: mail-new-user-title</div>
-          <div><strong>Body</strong>: mail-new-user-body</div>
-        </p>
+  <details>
+    <summary>
+      Finalize <strong>New Account</strong> Creation
+    </summary>
+    <p>
+      <strong>
+        This email is sent to the user so they can finalize their account creation and validate their email address.
+        Please note that a step form containing ${form.email} is required to send this email to the user.
+      </strong>
+    </p>
 
-        <p><strong>Parameters:</strong></p>
-        <ul>
-          <li><strong>tenant</strong>: The name of the tenant or organization</li>
-          <li><strong>link</strong>: The URL for validating the account</li>
-          <li><strong>tenant_data</strong>: The tenant or organization as a JSON object</li>
-          <li><strong>account_data</strong>: The information provided by the user for account creation, as a JSON object</li>
-        </ul>
-      </details>
-    </li>
+    <p>
+      <div><strong>Title</strong>: mail-account-creation-mail-confirmation-title</div>
+      <div><strong>Body</strong>: mail-account-creation-mail-confirmation-body</div>
+    </p>
+
+    <p><strong>Parameters:</strong></p>
+    <ul>
+      <li><strong>tenant</strong>: The name of the tenant or organization</li>
+      <li><strong>userName</strong>: The name of the user</li>
+      <li><strong>userEmail</strong>: The email address of the user</li>
+      <li><strong>urlAccept</strong>: The URL to validate the account</li>
+      <li><strong>urlDecline</strong>: The URL to cancel the account creation</li>
+      <li><strong>message</strong>: Additional message</li>
+      <li><strong>tenant_data</strong>: The tenant or organization as a JSON object</li>
+      <li><strong>account_creation_data</strong>: The information provided by the user during account creation, as a JSON object</li>
+    </ul>
+  </details>
+</li>
+
+<li>
+  <details>
+    <summary>
+      Finalize <strong>New Account</strong> Validation
+    </summary>
+    <p>
+      <strong>
+        This email is sent to an external user so they can approve or reject a new account creation request.
+      </strong>
+    </p>
+
+    <p>
+      <div><strong>Title</strong>: mail-account-creation-mail-validation-title</div>
+      <div><strong>Body</strong>: mail-account-creation-mail-validation-body</div>
+    </p>
+
+    <p><strong>Parameters:</strong></p>
+    <ul>
+      <li><strong>tenant</strong>: The name of the tenant or organization</li>
+      <li><strong>userName</strong>: The name of the user</li>
+      <li><strong>userEmail</strong>: The email address of the user</li>
+      <li><strong>urlAccept</strong>: The URL to approve the request</li>
+      <li><strong>urlDecline</strong>: The URL to reject the request</li>
+      <li><strong>message</strong>: Additional message</li>
+      <li><strong>tenant_data</strong>: The tenant or organization as a JSON object</li>
+      <li><strong>account_creation_data</strong>: The information provided by the user during account creation, as a JSON object</li>
+    </ul>
+  </details>
+</li>
+
+<li>
+  <details>
+    <summary>
+      <strong>New Account</strong> has been <strong>rejected</strong>
+    </summary>
+    <p>
+      <strong>
+        This email is sent to inform the user that their account creation request has been rejected.
+      </strong>
+    </p>
+
+    <p>
+      <div><strong>Title</strong>: mail-account-creation-mail-rejected-title</div>
+      <div><strong>Body</strong>: mail-account-creation-mail-rejected-body</div>
+    </p>
+
+    <p><strong>Parameters:</strong></p>
+    <ul>
+      <li><strong>tenant</strong>: The name of the tenant or organization</li>
+      <li><strong>userName</strong>: The name of the user</li>
+      <li><strong>userEmail</strong>: The email address of the user</li>
+      <li><strong>message</strong>: The administrator's rejection message</li>
+      <li><strong>tenant_data</strong>: The tenant or organization as a JSON object</li>
+      <li><strong>account_creation_data</strong>: The information provided by the user during account creation, as a JSON object</li>
+    </ul>
+  </details>
+</li>
+
+<li>
+  <details>
+    <summary>
+      <strong>New Account</strong> has been <strong>accepted</strong>
+    </summary>
+    <p>
+      <strong>
+        This email is sent to inform the user that their account creation request has been accepted.
+      </strong>
+    </p>
+
+    <p>
+      <div><strong>Title</strong>: mail-account-creation-mail-accepted-title</div>
+      <div><strong>Body</strong>: mail-account-creation-mail-accepted-body</div>
+    </p>
+
+    <p><strong>Parameters:</strong></p>
+    <ul>
+      <li><strong>tenant</strong>: The name of the tenant or organization</li>
+      <li><strong>userName</strong>: The name of the user</li>
+      <li><strong>userEmail</strong>: The email address of the user</li>
+      <li><strong>tenant_data</strong>: The tenant or organization as a JSON object</li>
+      <li><strong>account_creation_data</strong>: The information provided by the user during account creation, as a JSON object</li>
+    </ul>
+  </details>
+</li>
+
     <li>
       <details>
         <summary>
