add playwright tests for dashboard

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1681,10 +1681,25 @@
     "tenant.settings.authProvider.oauth.fetch.configuration.button.label": "Get configuration",
     "tenant.settings.authProvider.oauth.configuration.url.label": "URL of the OIDC config",
     "topbar.link.dashboard.label": "Dashboard",
+    "topbar.link.my.teams.label": "My teams",
     "topbar.search.placeholder": "Type %s to search",
     "topbar.theme.chooser.to.light.title": "Switch to light mode",
     "topbar.theme.chooser.to.dark.title": "Switch to dark mode",
     "dashboard.page.title": "Dashboard",
+    "dashboard.tile.error": "Sorry, an error has occurred",
+    "dashboard.page.tenant.setting.button.label": "Tenant settings",
+    "dashboard.apis.tile.title": "My APIs",
+    "dashboard.apis.tile.description": "Summary of publications and consumptions",
+    "dashboard.apis.tile.published.label": "Published",
+    "dashboard.apis.tile.consumed.label": "Consumed",
+    "dashboard.apikeys.tile.title": "My API keys",
+    "dashboard.apikeys.tile.description": "Status of the keys generated for this tenant",
+    "dashboard.apikeys.tile.active.label": "Active",
+    "dashboard.apikeys.tile.expire.label": "Expiring soon",
+    "dashboard.demands.tile.title": "Requests to validate",
+    "dashboard.demands.tile.description": "Pending subscriptions",
+    "dashboard.demands.tile.waiting.label": "Pending",
+    "dashboard.tile.error.button.label": "Reload data",
     "dashboard.apis.table.header.label.api": "API",
     "dashboard.apis.table.header.label.tags": "Tags",
     "dashboard.apis.table.header.label.team": "Team",
