--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1686,6 +1686,7 @@
   "account.creation.form.password.label": "Mot de passe",
   "account.creation.form.confirm.password.label": "Confirmation du mot de passe",
   "topbar.link.dashboard.label": "Tableau de bord",
+  "topbar.link.my.teams.label": "Mes équipes",
   "topbar.search.placeholder": "Taper %s pour rechercher",
   "topbar.theme.chooser.to.light.title": "Passer en mode clair",
   "topbar.theme.chooser.to.dark.title": "Passer en mode sombre",
@@ -1701,7 +1702,7 @@
   "dashboard.apikeys.tile.description": "État des clés générées pour ce tenant",
   "dashboard.apikeys.tile.active.label": "Active",
   "dashboard.apikeys.tile.expire.label": "Proche expiration",
-  "dashboard.demands.tile.title": "Demandes en cours",
+  "dashboard.demands.tile.title": "Demandes à valider",
   "dashboard.demands.tile.description": "Souscriptions en attente",
   "dashboard.demands.tile.waiting.label": "En attente",
   "dashboard.apis.table.header.label.api": "API",
