--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1695,7 +1695,7 @@
   "tenant.edition.color-theme.reset.button.label": "Réinitialiser le thème",
   "tenant.edition.color-theme.reset.confirm.title": "Confirmer la réinitialisation",
   "tenant.edition.color-theme.reset.confirm.message": "Voulez-vous vraiment réinitialiser le thème de couleur à celui par défaut ? Cette action supprimera définitivement le thème actuel.",
-  "tenant.edition.color-theme.reset.successful.message": "Le thème de couleur a été réinitialisé avec succès."
+  "tenant.edition.color-theme.reset.successful.message": "Le thème de couleur a été réinitialisé avec succès.",
   "topbar.link.dashboard.label": "Tableau de bord",
   "topbar.link.my.teams.label": "Mes équipes",
   "topbar.search.placeholder": "Taper %s pour rechercher",
