--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -585,7 +585,7 @@
   "api.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer une nouvelle API",
   "api.creation.description.modal": "Vous allez créer une nouvelle API. Pour quelle équipe voulez-vous la créer ?",
   "api.creation.right.panel.title": "Création d'une API",
-  "apigroop.creation.right.panel.title": "Création d'un API groupe",
+  "apigroup.creation.right.panel.title": "Création d'un groupe d'APIs",
   "apigroup.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer un nouveau groupe d'APIs",
   "apigroup.creation.description.modal": "Vous allez créer un nouveau groupe d'API. Pour quelle équipe voulez-vous le créer ?",
   "Set font family from asset": "Définir la police de style depuis un asset",
@@ -1759,6 +1759,7 @@
     "p": "%s demandes en attente"
   },
   "dashboard.create.api.button.label": "Créer une API",
+  "dashboard.create.apigroup.button.label": "Créer un groupe d'APIs",
   "search.team.placeholder": "Rechercher une équipe",
   "dashboard.create.team.button.label": "Créer une équipe"
 }
