--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1754,6 +1754,7 @@
         "p": "%s pending requests"
     },
     "dashboard.create.api.button.label": "Create new API",
+    "dashboard.more.creation.option.button.label": "More creation options",
     "dashboard.create.apigroup.button.label": "Create new API Group",
     "search.team.placeholder": "Search a team",
     "dashboard.create.team.button.label": "Create a team"
