FIX #887 - team avatar is now fully optional

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -78,6 +78,7 @@
     "Re-type the password": "Re-type the password",
     "Change my password": "Change my password",
     "Reload personal token": "Reload personal token",
+    "Set no avatar": "Set no avatar",
     "Set avatar from Gravatar": "Set avatar from Gravatar",
     "Set avatar from auth. provider": "Set avatar from auth. provider",
     "Change your picture": "Change your picture",
