--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1679,6 +1679,7 @@
   "tenant.security.account.creation.process.doc.default.workflow.admin": "form → mail de confirmation → validation admin",
   "tenant.security.account.creation.process.doc.close.aria": "Fermer la documentation",
   "tenant.security.account.creation.process.doc.open.aria": "Voir la documentation",
+  "tenant.security.configure.default.auth.otoroshi.entities.button.label": "Configurer les entitités otoroshi authorisées par défaut",
   "tenant.settings.mailer.mailgun.test.recipient.email.label": "Destinataire du mail de test",
   "tenant.settings.mailer.test.connection.button.label": "Tester la connexion",
   "tenant.settings.mailer.test.connection.success.label": "Test de connexion réussi",
