#907 - add ability to clear default auth otoroshi entities

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1679,12 +1679,14 @@
   "tenant.security.account.creation.process.doc.default.workflow.admin": "form → mail de confirmation → validation admin",
   "tenant.security.account.creation.process.doc.close.aria": "Fermer la documentation",
   "tenant.security.account.creation.process.doc.open.aria": "Voir la documentation",
+  "tenant.security.dispatch.default.auth.entities.modal.title": "Configurer les entitités otoroshi authorisées par défaut",
   "tenant.security.configure.default.auth.otoroshi.entities.button.label": "Configurer les entitités otoroshi authorisées par défaut",
   "tenant.security.dispatch.default.auth.entities.choice.label": "Les entités autorisées par défaut ont été modifiées. Souhaitez-vous appliquer ces changements aux équipes existantes ?",
   "tenant.security.dispatch.default.auth.entities.choice.nothing": "Seules les nouvelles équipes utiliseront ces valeurs par défaut",
   "tenant.security.dispatch.default.auth.entities.choice.replace": "Écraser les entités actuelles de chaque équipe par les nouvelles valeurs par défaut",
   "tenant.security.dispatch.default.auth.entities.choice.merge": "Ajouter les nouvelles entités par défaut tout en conservant celles déjà configurées",
   "tenant.security.dispatch.default.auth.entities.successful": "Les entités autorisées ont été mises à jour avec succès pour toutes les équipes.",
+  "tenant.security.clear.default.auth.otoroshi.entities.button.label": "Supprimer toutes les entités",
   "tenant.settings.mailer.mailgun.test.recipient.email.label": "Destinataire du mail de test",
   "tenant.settings.mailer.test.connection.button.label": "Tester la connexion",
   "tenant.settings.mailer.test.connection.success.label": "Test de connexion réussi",
