--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1678,12 +1678,14 @@
     "tenant.security.account.creation.process.doc.default.workflow.admin": "form → confirmation mail → admin validation",
     "tenant.security.account.creation.process.doc.close.aria": "Close documentation",
     "tenant.security.account.creation.process.doc.open.aria": "Show la documentation",
+    "tenant.security.dispatch.default.auth.entities.modal.title": "Configure default authorized ototoshi entities",
     "tenant.security.configure.default.auth.otoroshi.entities.button.label": "Configure default authorized ototoshi entities",
     "tenant.security.dispatch.default.auth.entities.choice.label": "The default authorized entities have been modified. Would you like to apply these changes to existing teams?",
     "tenant.security.dispatch.default.auth.entities.choice.nothing": "Only new teams will use these default values",
     "tenant.security.dispatch.default.auth.entities.choice.replace": "Overwrite each team's current entities with the new default values",
     "tenant.security.dispatch.default.auth.entities.choice.merge": "Add the new default entities while keeping the existing ones",
     "tenant.security.dispatch.default.auth.entities.successful": "Authorized entities have been successfully updated for all teams.",
+    "tenant.security.clear.default.auth.otoroshi.entities.button.label": "Clear all entities",
     "tenant.settings.mailer.mailgun.test.recipient.email.label": "Recipient email (for test only)",
     "tenant.settings.mailer.test.connection.button.label": "Test connection",
     "tenant.settings.mailer.test.connection.success.label": "Test coonection succeeded",
