Add some docs about new features

--- a/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
@@ -9,6 +9,8 @@ The first step is to fetch the Daikoku's emails using the following command:
 ```sh
 daikoku pull mails
 ```
+this command can be replayed to pull new mails after upgrading daikoku. 
+Keep in mind that your project or the CLI is the truth source not daikoku. Daikoku is used only once to obtain the default mail content.
 
 # Update the email layout
 
