--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1772,5 +1772,6 @@
   "dashboard.more.creation.option.button.label": "Plus d'options de création",
   "dashboard.create.apigroup.button.label": "Créer un groupe d'APIs",
   "search.team.placeholder": "Rechercher une équipe",
-  "dashboard.create.team.button.label": "Créer une équipe"
+  "dashboard.create.team.button.label": "Créer une équipe",
+  "dashboard.api.table.more.button.label": "afficher plus d'APIs"
 }
