feat : API deprecation init

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -121,6 +121,7 @@
     "notif.issues": "A new issue has been opened regarding API %s.",
     "notif.issues.comment": "A new comment has been added to an issue related to you.",
     "notif.account.creation.attempt": "Registration request pending",
+    "notif.ApiDepreciationWarning": "The API %s has been deprecated",
     "api.access.request": "You will send an access request to the API %s. For which team do you want to send the request?",
     "FreeWithoutQuotas": "Free without quotas",
     "FreeWithQuotas": "Free with quotas",
@@ -1625,6 +1626,7 @@
     "notifications.page.filters.type.TransferApiOwnership.label": "API ownership transfer",
     "notifications.page.filters.type.ApiSubscriptionTransferSuccess.label": "Subscription transfer successful",
     "notifications.page.filters.type.CheckoutForSubscription.label": "Subscription payment",
+    "notifications.page.filters.type.ApiDepreciationWarning.label": "API depreciation",
     "notifications.page.filters.all.notifications.label": "All",
     "notifications.page.filters.unread.notifications.label": "To treat",
     "notifications.page.filters.clear.label": "Reset filters",
