--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -121,6 +121,7 @@
   "notif.issues": "Une nouvelle issue a été ouverte concernant l'API %s",
   "notif.issues.comment": "Un nouveau commentaire a été ajouté à une issue vous concernant.",
   "notif.account.creation.attempt": "Demande d'inscription en attente",
+  "notif.ApiDepreciationWarning": "L'API %s a été dépréciée",
   "api.access.request": "Vous allez envoyer une demande d'accès à l'API %s. Pour quelle équipe voulez-vous envoyer cette demande ?",
   "FreeWithoutQuotas": "Gratuit sans quotas",
   "FreeWithQuotas": "Gratuit avec quotas",
@@ -1626,6 +1627,7 @@
   "notifications.page.filters.type.ApiSubscriptionTransferSuccess.label": "Transfert de souscription réussi",
   "notifications.page.filters.type.CheckoutForSubscription.label": "Paiement pour souscription",
   "notifications.page.filters.type.AccountCreationAttempt.label": "Demande de création de compte",
+  "notifications.page.filters.type.ApiDepreciationWarning.label": "API dépréciée",
   "notifications.page.filters.all.notifications.label": "Toutes",
   "notifications.page.filters.unread.notifications.label": "À traiter",
   "notifications.page.filters.clear.label": "Réinitialiser les filtres",
